# richapi

./: .gitignore  CONTRIBUTING.rst  README.md  deploy_docs.py  mkdocs.yml  pyproject.toml  setup.py  versions.json
.github/workflows/: on-release-main.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/advance/: index.html
0.1.0/conventions/: index.html
0.1.0/search/: search_index.json
0.2.0/: index.html  sitemap.xml
0.2.0/advance/: index.html
0.2.0/conventions/: index.html
0.2.0/implementation/: index.html
0.2.0/search/: search_index.json
0.3.0/: sitemap.xml
0.3.0/conventions/: index.html
0.3.0/search/: search_index.json
0.3.1/: 404.html  sitemap.xml
0.3.1/advance/: index.html
0.3.1/conventions/: index.html
0.3.2/: index.html
0.3.2/search/: search_index.json
docs/: advance.md  conventions.md  implementation.md  index.md  modules.md
fastapi-integration/: __init__.py  common.py  config.py  models.py
fastapi-integration/auth/: routers.py  utils.py
fastapi-integration/generic/: crud.py
fastapi_integration/: __init__.py  common.py  db.py  models.py
fastapi_integration/auth/: routers.py  schemas.py  security.py  utils.py
fastapi_integration/generic/: crud.py
fastapi_integration/orm/: base.py  models.py  queries.py  signals.py
fastapi_integration/queries/: base.py  objects.py  utils.py
richapi/: __init__.py  cli.py  exc2.py  exc_tracker.py  exceptions.py  parse.py  simple.py
richapi/exc_parser/: __init__.py  compiler.py  handler.py  openapi.py  protocol.py
tests/: complex_query.py  query.py  start.py  test_builder_pattern.py  test_class.py  test_compiler.py  test_custom_exc.py  test_exc_raising_cases.py  test_exception_edge_cases.py  test_fastapi_auth_functions.py  test_import_from_other_module.py  test_instance_attr_call.py
tests/app/: foo1.py
