[project]
name = "richapi"
version = "0.3.2"
description = "Find HTTPExceptions and turn them into documented responses!"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["typer>=0.12", "fastapi>=0.105"]
license = 'MIT'

[project.urls]
repository = "https://github.com/ManiMozaffar/richapi"
Homepage = 'https://github.com/ManiMozaffar/richapi'
Documentation = 'https://github.com/ManiMozaffar/richapi'
Source = 'https://github.com/ManiMozaffar/richapi'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = "--log-level=DEBUG -v"

[tool.pyright]
typeCheckingMode = "standard"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["richapi"]

[tool.setuptools.package-data]
"richapi" = ["py.typed"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
    "pyright>=1.1.384",
    "rich>=13.9.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.2.7",
    "mkdocstrings[python]>=0.25.1",
    "mkdocs-simple-hooks>=0.1.5",
    "mkdocs-material-extensions>=1.3.1",
    "mdx-truly-sane-lists>=1.3",
    "mike==2.0.0",
    "psutil>=6.0.0",
    "tox>=4.21.2",
    "uvicorn>=0.31.1",
    "httpx>=0.27.2",
]

[tool.behavior]
use-uv = true

[project.scripts]
richapi = "richapi.cli:app"
